the mew of colspan cell needs to be redistributed this can only be done during the strategy init. bug 207208 r=jkeiser sr=dbaron