layout/html/table/src/nsCellMap.cpp
@@ -2421,9 +2421,9 @@ PRBool nsCellMap::ColHasSpanningCells(nsTableCellMap& aMap,
   for (PRInt32 rowIndex = 0; rowIndex < mRowCount; rowIndex++) {
     CellData* cd = GetDataAt(aMap, rowIndex, aColIndex, PR_TRUE);
     if (cd && (cd->IsOrig())) { // cell originates 
-      CellData* cd2 = GetDataAt(aMap, rowIndex + 1, aColIndex, PR_TRUE);
+      CellData* cd2 = GetDataAt(aMap, rowIndex, aColIndex +1, PR_TRUE);
       if (cd2 && cd2->IsColSpan()) { // cd2 is spanned by a col
-        if (cd->GetCellFrame() == GetCellFrame(rowIndex + 1, aColIndex, *cd2, PR_FALSE)) {
+        if (cd->GetCellFrame() == GetCellFrame(rowIndex , aColIndex + 1, *cd2, PR_FALSE)) {
           return PR_TRUE;
         }
       }
