layout/html/table/src/nsTableFrame.cpp
@@ -3782,7 +3782,7 @@ nsTableFrame::CellChangedWidth(const nsTableCellFrame& aCellFrame,
   PRBool colMinGetsSmaller = (cellMin < colMin) && (colMin == aPrevCellMin);
 
   if (colMinGetsBigger || colMinGetsSmaller) {
-    if (ColIsSpannedInto(colIndex)) {
+    if (ColIsSpannedInto(colIndex) || ColHasSpanningCells(colIndex)) {
       // bail out if a colspan is involved
       SetNeedStrategyInit(PR_TRUE);
       return PR_TRUE;
@@ -7324,13 +7324,24 @@ PRBool nsTableFrame::RowIsSpannedInto(PRInt32 aRowIndex)
   return result;
 }
 
+PRBool nsTableFrame::ColHasSpanningCells(PRInt32 aColIndex)
+{
+  PRBool result = PR_FALSE;
+  nsTableCellMap * cellMap = GetCellMap();
+  NS_PRECONDITION (cellMap, "bad call, cellMap not yet allocated.");
+  if (cellMap) {
+    result = cellMap->ColHasSpanningCells(aColIndex);
+  }
+  return result;
+}
+
 PRBool nsTableFrame::ColIsSpannedInto(PRInt32 aColIndex)
 {
   PRBool result = PR_FALSE;
   nsTableCellMap * cellMap = GetCellMap();
   NS_PRECONDITION (cellMap, "bad call, cellMap not yet allocated.");
   if (cellMap) {
-		result = cellMap->ColIsSpannedInto(aColIndex);
+    result = cellMap->ColIsSpannedInto(aColIndex);
   }
   return result;
 }
